--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # tomcat配置
 server.port=9000
+server.servlet.context-path=/wxapp/api/v0.1
 
 # mysql配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,7 +10,6 @@ spring.datasource.password=
 
 # 自动建表，控制台显示建表语句
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.initialization-mode=always
 spring.datasource.schema=classpath:schema/wxapp.sql
 
@@ -24,6 +24,19 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.connection-test-query=SELECT 1
 
+# Redis配置
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.pool.max-active=200
+spring.redis.pool.max-wait=-1
+spring.redis.pool.max-idle=10
+spring.redis.pool.min-idle=0
+spring.redis.timeout=300
 
-
-
+#Retrofit
+retrofit.url=https://api.weixin.qq.com
+sns.granttype=authorization_code
+sns.appid=wx53d5d5ee7b53d410
+sns.secret=8eeff13af65e58be43243940764f933d
